--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "socket-io-typescript-example",
+  "name": "backend",
   "version": "0.0.1",
-  "description": "A socket.io example written in TypeScript",
   "main": "index.js",
-  "author": "Luis Aviles",
-  "license": "MIT",
+  "author": "Chris",
   "scripts": {
     "start": "nodemon dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "server":"gulp build && npm start"
   },
   "devDependencies": {
     "@types/express": "4.17.2",
