--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/http-loader": "~4.0.0",
     "core-js": "~2.5.4",
     "express": "~4.16.4",
+    "pdfmake": "^0.1.70",
     "rxjs": "~6.5.4",
     "socket.io": "~2.2.0",
     "socket.io-client": "~2.2.0",
